# STM32-CMAKE_Template

./: CMakeLists.txt  Makefile  Readme.md  gcc-arm-none-eabi.cmake  setup.cmake
app/src/: main.c
